# TrafficFlow

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt
.github/workflows/: ci.yml
Tests/: gtest.cpp
build-clangd/: compile_commands.json
headers/: Constants.h  Intersection.h  Network.h
src/: Constants.cpp  Intersection.cpp  Network.cpp
